# MT

./:     .pub  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
Code/: Current cash flow value.ipynb  Gas poweplant - investigation.ipynb  Gas poweplant - investigation.py  Gas power plant.ipynb  Gas powerplant - final example .py  Granularity vs utility function.py  Is Black Scholes model only expected value? .ipynb  OLD Gas power plant.ipynb  OLD Gas power plant.py  V.npy  Valuation techniques.ipynb
Code/.ipynb_checkpoints/: Valuation techniques-checkpoint.ipynb  Value I am indifferent to -checkpoint.ipynb
Code/ADP programs /: ADP algorithm .ipynb
Code/Gas example/: Gas poweplant - investigation.ipynb  Gas poweplant - investigation.py  Gas powerplant - final example .ipynb  (+1 more)
MT/: Titles.js
Presentation/: Pricer widget - investigation - Jupyter Notebook.htm  SPMS_Rolenec_presentation.aux  SPMS_Rolenec_presentation.blg  SPMS_Rolenec_presentation.nav  SPMS_Rolenec_presentation.out  SPMS_Rolenec_presentation.tex  SPMS_Rolenec_presentation.toc
Tex/: Master's thesis.aux  Master's thesis.bbl  Master's thesis.blg  Master's thesis.tex  Master's thesis.toc  fr real .bib  fr.bib
Tex_complete_thesis/: Master's thesis.aux  Master's thesis.tex  Master's thesis.toc
Tex_initial_example/: Master's thesis.bbl  Master's thesis_example.aux  Master's thesis_example.blg  Master's thesis_example.tex  Master's thesis_example.toc
Tex_thesis_2/: Master's thesis.aux  Master's thesis.bbl  Master's thesis.blg  Master's thesis.tex  Master's thesis.toc  fr.bib
(+118 files in other folders)
