[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "Energy trading analytics repository."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "enal", from = "src" },
]

[tool.poetry.scripts]
enq = "enal.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
scipy = "^1.5.2"
cylp = "^0.91.0"
jupyter = "^1.0.0"
notebook = "^6.1.4"
matplotlib = "^3.3.1"
mortgage = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pre-commit = "^2.6.0"
notebook = "^6.1.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
